# xircuits

./: .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  TorchPredictFromModel.xircuits  TorchTrainModel.xircuits  Untitled.ipynb  install.json  package-lock.json  package.json  pyproject.toml  requirements-full.txt  requirements.txt  setup.py  test.xpipe  testMulti.xircuits  tsconfig.json  tsconfig.tsbuildinfo  xircuits_compiler.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: binder-badge.yaml  build-python-wheel.yml  ebrains-sync.yml  publish-release.yml  pypi-github-release-publish.yml  pypi-publish.yml  run-cli-tests.yml  run-ui-tests.yml
.xircuits/: config.ini
.xpipes/: config.ini
adr/: 0000-TEMPLATE.md  0001-Specify Components with Decorator.md  0002-Enable Data Passing via Context.md  0002-Refactor Component Libraries as Submodules.md  0003-Refactor Component Libraries as Submodules.md  0004-Define Component Libraries and Templates Implementation.md  0005-Migrate Component Libraries to Manifest-Based Repository Management.md  0005-Migrate Component Library Collection to Manifest Repository.md  0006-Migrate Component Library Installation to Vendored Architecture.md  0006-Migrate Project Templates to Workspace-Based Architecture.md
binder/: environment.yml  postBuild
examples/: ArgumentParameters.xircuits  AutoMLBasicAnomalyDetection.xircuits  AutoMLBasicBinaryClassification.xircuits  AutoMLBasicClustering.xircuits  AutoMLBasicMulticlassClassification.xircuits  AutoMLBasicNLP.xircuits  AutoMLBasicRegression.xircuits  AutoMLClassificationBlendModels.xircuits  AutoMLRegressionStackModels.xircuits  AutoMLTuningNLP.xircuits  BranchExample.xircuits  CompulsoryPorts.xircuits  ControlflowBranch.xircuits  ControlflowCounterLoop.xircuits  ControlflowExample.xircuits  ControlflowLoop.xircuits  ConvertToOnnxSample.xircuits  ConvertToOnnxSample.xpipes  DynamicPorts.xircuits  HelloXircuits.xircuits  KerasModelPredict.xircuits  KerasModelPredict.xpipe  KerasModelPredict.xpipes  KerasTrainImageClassifier.py  KerasTrainImageClassifier.xircuits  KerasTrainImageClassifier.xpipes  KerasTransferLearning.py  KerasTransferLearning.xircuits  MSLoadModel.xircuits  MSLoadModel.xpipes  MSTrainUpload.xpipes  ParallelProcesses.xircuits  PyTorchUnetInferenceSample.xircuits  PyTorchUnetTrainSample.xircuits  PyTorchUnetTrainSample.xpipes  PytorchPredictFromModel.xircuits  PytorchTrainCustomNN.xircuits  PytorchTrainModel.xircuits  RpaOpenWebpage.xircuits  RunParallelProcess.xircuits  (+12 more)
jupyter-config/nb-config/: xircuits.json  xpipes.json
jupyter-config/server-config/: xircuits.json  xpipes.json
jupyterlab_xpressai_theme/: .gitignore  LICENSE  MANIFEST.in  README.md  install.json  package-lock.json  package.json  setup.py
jupyterlab_xpressai_theme/binder/: environment.yml  postBuild
jupyterlab_xpressai_theme/src/: index.ts
jupyterlab_xpressai_theme/style/: index.css
project templates/: readme.md
project-templates/: AgentTemplate.xircuits  ServiceTemplate.xircuits  readme.md
schema/: plugin.json
src/: XircuitsFactory.ts  XircuitsWidget.tsx  global.css  index.tsx  xircuitFactory.ts  xircuitWidget.tsx  xpipeFactory.ts  xpipeModel.ts  xpipeWidget.tsx
src/commands/: ChatActionCommands.tsx  CommandIDs.tsx  ContextMenu.ts  CustomActionEvent.tsx  LibraryActionCommands.tsx  NodeActionCommands.ts  NodeActionCommands.tsx
src/component_info_sidebar/: CollapsibleSection.tsx  ComponentPreviewWidget.tsx  IONodeTree.tsx  nodeNavigation.ts  portPreview.ts  portPreview.tsx  previewHelper.ts
src/components/: CustomDiagramState.ts  CustomNodeFactory.tsx  CustomNodeModel.ts  CustomNodeWidget.tsx  CustomPortModel.ts  DragNewLinkState.ts  RunSwitcher.tsx  XircuitsApp.ts  XircuitsBodyWidget.tsx  XpipesApp.ts  xircuitBodyWidget.tsx  xpipeBodyWidget.tsx
src/components_xircuit/: Sidebar.tsx  TrayItemWidget.tsx
src/components_xpipe/: Component.ts  Sidebar.tsx  TrayWidget.tsx
src/context-menu/: CanvasContextMenu.tsx  ComponentsPanel.tsx  NodeActionsPanel.tsx  TrayContextMenu.tsx  (+2 more)
style/: CanvasContextMenu.css  Comment.css  ComponentInfo.css  ComponentPreviewWidget.css  ComponentsPanel.css  ContextMenu.css  NodeActionPanel.css  Sidebar.css  base.css  description-markdown.css  index.css  index.js  toggle.css
tests/: cli_tests.py  tests.py
ui-tests/: README.md  package.json  playwright.config.ts  xircuits_test_utils.tsx
xai_components/: base.py  components.py  readme.md
xai_components/xai_controlflow/: ControlflowBranch.xircuits  ControlflowCounterLoop.xircuits  ControlflowLoop.xircuits  ExceptionHandlerExample.xircuits  README.md  WorkflowComponentsExample.py  WorkflowComponentsExample.xircuits  branches.py  library-config.ini  pyproject.toml  readme.md
xai_components/xai_events/: Events.xircuits  event_components.py  library-config.ini  pyproject.toml  readme.md
xai_components/xai_template/: HelloTutorial.xircuits  example_components.py  library-config.ini  pyproject.toml  readme.md
xai_components/xai_utils/: README.md  RunParallelExample.xircuits  UtilsZipDirectory.xircuits  library-config.ini  pyproject.toml  readme.md  utils.py
xircuits/: __init__.py  _version.py  hatch_build_hook.py  start_xircuits.py  start_xpipes.py  utils.py
xpipe/: .gitignore  CustomKerasComponent.py  CustomKerasComponent.xpipe  MANIFEST.in  README.md  SampleFull.xpipe  SparkLabeledPointSample.py  SparkLabeledPointSample.xpipe  SparkLinePlot.py  SparkLinePlot.xpipe  SparkLogisticRegressionSample.py  SparkLogisticRegressionSample.xpipe  SparkSQLPlotBar.py  SparkSQLPlotBar.xpipe  SparkSample.py  SparkSample.xpipe  XAI-Experiments.py  XAI-Experiments.xpipe  components.py  handlers.py  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_linux.txt  tsconfig.json  tsconfig.tsbuildinfo
xpipe_component_library/: .gitignore  README.md  RELEASE.md  install.json  package-lock.json  package.json  setup.py
xpipes/: __init__.py  handlers.py  start_xpipes.py
(+406 files in other folders)
