[project]
name = "xai-controlflow"
version = "0.1.0"
description = "Xircuits component library for controlflow purposes."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/XpressAI/xircuits/tree/master/xai_components/xai_controlflow"
keywords = ["xircuits", "controlflow", "if-else", "branch"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "ControlflowBranch.xircuits"