[project]
name = "xai-template"
version = "0.1.0"
description = "Xircuits component library template for Xircuits."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xircuits"
keywords = ["xircuits"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"